# electronic_labbook

./: .gitignore  README.md  TODO.md  labbook.toml.example  pyproject.toml  requirements.txt  sdgl.toml.example
catalog/: README.md  admin.html  admin.js  auth.js.example  edit-overlay.css  edit-overlay.js  forms.js  home_template.html  manifest.webmanifest  sdgl.html  sw.js
docs/: ROADMAP.md
eln/: __init__.py  channels.py  cli.py  config.py  hashing.py  share.py  timestamp.py
eln/analysis/: README.md  __init__.py  gitref.py  provenance.py
eln/db/: README.md  __init__.py  dump_db.py  init_db.py  rebuild_db.py  reconstruct_history.py  schema.sql
eln/generators/: README.md  __init__.py  __main__.py  catalog.py  code.py  documents.py  home.py  nav.py  notebooks.py  posters.py  presentations.py  protocols.py  reports.py
eln/plugins/: README.md  __init__.py  code.py  documents.py  posters.py  presentations.py
eln/sdgl/: README.md  __init__.py  backup.py  engine.py  folder_dialog.py  provenance_store.py
eln/server/: README.md  __init__.py  __main__.py  app.py  experiment_ids.py  publish.py
sample_data/: README.md
sample_data/notebooks/: SORVI-01.ipynb
tests/: test_channels.py  test_cli.py  test_config.py  test_hashing.py  test_share.py  test_timestamp.py
tests/analysis/: test_gitref.py  test_provenance.py  test_stale_outputs.py
tests/db/: test_dump_rebuild.py  test_reconstruct_history.py
tests/fixtures/: digicert_sample.tsr
tests/generators/: test_code.py  test_documents.py  test_generate.py  test_nav.py  test_notebooks.py  test_posters.py  (+2 more)
(+25 files in other folders)
