[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "electronic-labbook"
version = "0.0.1"
description = "Filesystem-centric, tamper-evident electronic lab notebook with a scientific data graph layer (SDGL)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Artur Ruppel", email = "artur@ruppel.pro" }]
keywords = ["eln", "lab-notebook", "provenance", "microscopy", "data-graph", "sdgl"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "Flask==3.0.0",
    "flask-cors==4.0.0",
    "tomli==2.0.1 ; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/arturruppel/electronic_labbook"
Repository = "https://github.com/arturruppel/electronic_labbook"

[tool.setuptools.packages.find]
include = ["eln*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
